# ASD

./: .gitignore  CMakeLists.txt  README.md  mac_clion  mac_term  usefulFunctions.c  usefulFunctions.h
E01/: 01_1selectionSortIter.c  01_3linearSearch.c  01_45binarySearch.c  1_1selectionSortIter.c  1_1selectionSortIter.h  1_3linearSearch.c  CMakeLists.txt  antonino.c  binarySearch.c  linearSearch.c  selectionSortIter.c  selectionSortIter.h
E02/: 02_1selSortRicor.c  02_3hotel.c  2_1selSortRicor.c  2_2_confrontoSelectionSort.c  2_2confrontoSelectionSort  2_2confrontoSelectionSort.c  2_3hotel.c  CMakeLists.txt
E02/2_2confrontoSelectionSort/: desktop_clion  desktop_term
E03/: 03_1KMP.c  03_3KMPCircolare.c  3_1KMP.c  CMakeLists.txt
E04/: 04_amazon.c  4_1coda.c  4_2stack.c  4_5amazon.c  4_amazon.c  CMakeLists.txt
E05/: 05_spotify.c  5_spotify.c  CMakeLists.txt
E06/: 06_alberiDecisionali.c  6_alberiDecisionali.c  CMakeLists.txt
E07/: 07_er.c  CMakeLists.txt  ps
E08/: 08_a_beer_r.c  CMakeLists.txt
E09/: 09_rotteAeree.c  9_1grafi.c  CMakeLists.txt
E10/: 10_parcheggio.c  CMakeLists.txt
E11/: 11_1insertionSort.c  11_2quickSort.c  11_3quickInsertionSort.c  CMakeLists.txt
E12/: 12_1mergeSort.c  12_2heapSort.c  CMakeLists.txt
report/: CMakeLists.txt  main.c  recap  report.c  report.docx  report.xlsx  usefulFunctions.h  ~$report.docx
